# sql-ast

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: test.yml
src/: ast.rs  lib.rs  renderer.rs
src/ast/: column.rs  common_table_expression.rs  compare.rs  conditions.rs  conjunctive.rs  delete.rs  expression.rs  function.rs  grouping.rs  insert.rs  join.rs  ops.rs  ordering.rs  query.rs  row.rs  select.rs  table.rs  update.rs  values.rs
src/ast/function/: aggregate_to_string.rs  average.rs  coalesce.rs  concat.rs  count.rs  encode.rs  json_agg.rs  json_build_object.rs  json_extract.rs  json_extract_array.rs  json_unquote.rs  lower.rs  maximum.rs  minimum.rs  row_number.rs  row_to_json.rs  sum.rs  to_jsonb.rs  upper.rs
src/renderer/: postgres.rs
