[package]
name = "grafbase-sql-ast"
description = "An AST to generate SQL queries"
version = "0.1.6"
edition = "2021"
authors = ["Grafbase"]
license = "Apache-2.0"
homepage = "https://grafbase.com"
repository = "https://github.com/grafbase/grafbase"
keywords = ["sql", "ast", "grafbase"]

[features]
default = ["postgresql", "mysql", "sqlite"]
postgresql = []
mysql = []
sqlite = []

[dependencies]
anyhow = "1.0.75"
serde_json = "1"
